# rust

./: .gitmodules  Cargo.toml  README.md
lrpmp/: Cargo.toml
lrpmp-macros/: Cargo.toml
lrpmp-macros/src/: imp.rs  lib.rs  spec.rs
lrpmp-spec/: Cargo.toml
lrpmp-spec/src/: lib.rs  naming.rs  uri.rs  validation.rs
lrpmp/src/: io.rs  lib.rs  serde.rs
lrpmp/src/bus/: client.rs  hub.rs  message.rs  mod.rs  transport.rs
lrpmp/src/codec/: generic.rs  mod.rs
lrpmp/src/message/: error.rs  generic.rs  mod.rs  transmute.rs
lrpmp/src/types/: body.rs  kind.rs  macros.rs  meta.rs  uri.rs
src/: cbor.rs  io.rs  lib.rs  serde.rs
src/message/: basic.rs  codec.rs  encdec.rs  error.rs  io.rs  macros.rs  mod.rs  special.rs  types.rs
