[package]
name = "lrpmp-spec"
version = "0.1.0"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"
include = ["spec/src/definitions.toml"]

[features]
default = []
codegen = ["quote", "proc-macro2"]

[dependencies]
toml = "0.5"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "~1", features = ["derive"] }
error-chain = "0.12"
Inflector = "0.11"

quote = { version = "~1", optional = true }
proc-macro2 = { version = "~1", optional = true }
