[package]
name = "lrpmp"
version = "0.1.0"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
serde_cbor = "~0.11"
lrpmp-macros = "0.1"
lrpmp-spec = "0.1"
futures = "0.3"
bytestring = { git = "https://github.com/avitex/rust-bytestring", features = ["serde"] }
proc-macro-hack = "0.5"